# axum-health

./: Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: rust.yml
examples/: diesel.rs  sea_orm.rs  sqlx.rs
src/: diesel.rs  lib.rs  sea_orm.rs  service.rs  sqlx.rs  validation.rs
src/database/: diesel.rs  mod.rs  sea_orm.rs  sqlx.rs
tests/: mysql.rs  postgres.rs  sqlite.rs
