[package]
name = "axum-health"
version = "0.1.0"
edition = "2021"
authors = ["Alan Baumgartner"]
license = "MIT OR Apache-2.0"
keywords = ["axum", "diesel", "sqlx", "sea-orm"]
readme = "README.md"
repository = "https://github.com/alanbaumgartner/axum-health"
homepage = "https://github.com/alanbaumgartner/axum-health"
documentation = "https://docs.rs/axum-health"
description = """
Spring Boot like health indicators.
"""
exclude = ["/tests", "/.github"]

[dependencies]
async-trait = { version = "0.1.86" }
axum = { version = "0.8.1" }
serde = { version = "1.0.217", features = ["derive"] }
tower-layer = { version = "0.3.3" }
futures = { version = "0.3.31" }

diesel = { version = "2.2.7", default-features = false, optional = true }
diesel-async = { version = "0.5.2", default-features = false, optional = true }
sea-orm = { version = "1.1.5", default-features = false, optional = true }
sqlx = { version = "0.8.3", default-features = false, optional = true }

[features]
default = []

diesel-async-postgres = ["diesel-postgres", "_diesel-async", "diesel-async/postgres"]
diesel-async-mysql = ["diesel-mysql", "_diesel-async", "diesel-async/mysql"]
diesel-async-sqlite = ["diesel-sqlite", "_diesel-async", "diesel-async/sqlite"]
diesel-async-deadpool = ["_diesel-async", "diesel-async/deadpool"]
diesel-async-mobc = ["_diesel-async", "diesel-async/mobc"]
diesel-async-bb8 = ["_diesel-async", "diesel-async/bb8"]
_diesel-async = ["_diesel", "dep:diesel-async"]

diesel-postgres = ["_postgres", "_diesel", "diesel/postgres"]
diesel-mysql = ["_mysql", "_diesel", "diesel/mysql"]
diesel-sqlite = ["_sqlite", "_diesel", "diesel/sqlite"]
_diesel = ["dep:diesel", "diesel/r2d2", "diesel/i-implement-a-third-party-backend-and-opt-into-breaking-changes"]

sea-orm-postgres = ["_postgres", "_sea-orm", "sea-orm/sqlx-postgres"]
sea-orm-mysql = ["_mysql", "_sea-orm", "sea-orm/sqlx-mysql"]
sea-orm-sqlite = ["_sqlite", "_sea-orm", "sea-orm/sqlx-sqlite"]
_sea-orm = ["dep:sea-orm"]

sqlx-postgres = ["_postgres", "_sqlx", "sqlx/postgres"]
sqlx-mysql = ["_mysql", "_sqlx", "sqlx/mysql"]
sqlx-sqlite = ["_sqlite", "_sqlx", "sqlx/sqlite"]
_sqlx = ["dep:sqlx"]

_sqlite = []
_mysql = []
_postgres = []

[dev-dependencies]
axum-test = "17.2.0"
tokio = { version = "1.43.0", features = ["test-util"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio"] }
testcontainers = "0.23.2"
testcontainers-modules = { version = "0.11.6", features = ["postgres", "mysql"] }
tempfile = "3.17.1"

[[example]]
name = "diesel"
required-features = ["diesel-sqlite"]

[[example]]
name = "sea_orm"
required-features = ["sea-orm-sqlite"]

[[example]]
name = "sqlx"
required-features = ["sqlx-sqlite"]
