[package]
name = "axum-health"
version = "0.1.2"
edition = "2021"
authors = ["Alan Baumgartner"]
license = "MIT OR Apache-2.0"
keywords = ["axum", "diesel", "sqlx", "sea-orm"]
readme = "README.md"
repository = "https://github.com/alanbaumgartner/axum-health"
homepage = "https://github.com/alanbaumgartner/axum-health"
documentation = "https://docs.rs/axum-health"
description = """
Spring Boot like health indicators.
"""
exclude = ["/tests", "/.github"]

[dependencies]
async-trait = { version = "0.1.86" }
axum = { version = "0.8.1" }
serde = { version = "1.0.217", features = ["derive"] }
tower-layer = { version = "0.3.3" }
futures = { version = "0.3.31" }

diesel = { version = "2.2.7", default-features = false, optional = true }
diesel-async = { version = "0.5.2", default-features = false, optional = true }
sea-orm = { version = "1.1.5", default-features = false, optional = true }
sqlx = { version = "0.8.3", default-features = false, optional = true }

[features]
default = []

diesel-async-postgres = ["_diesel-async", "diesel-async/postgres"]
diesel-async-mysql = ["_diesel-async", "diesel-async/mysql"]
diesel-deadpool = ["_diesel-async", "diesel-async/deadpool"]
diesel-mobc = ["_diesel-async", "diesel-async/mobc"]
diesel-bb8 = ["_diesel-async", "diesel-async/bb8"]
_diesel-async = ["diesel", "dep:diesel-async"]

diesel = ["dep:diesel", "diesel/i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
sea-orm = ["dep:sea-orm"]
sqlx = ["dep:sqlx"]

[dev-dependencies]
diesel-async = { version = "0.5.2", features = ["mysql", "sqlite", "postgres", "deadpool", "mobc", "bb8"] }
diesel = { version = "2.2.7", features = ["r2d2", "mysql", "sqlite", "postgres"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql", "sqlite", "postgres"] }
sea-orm = { version = "1.1.5", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite"] }
axum-test = "17.2.0"
tokio = { version = "1.43.0", features = ["test-util"] }
testcontainers = { version = "0.23.2" }
testcontainers-modules = { version = "0.11.6", features = ["postgres", "mysql"] }
tempfile = "3.17.1"

[[example]]
name = "diesel"
required-features = ["diesel", "diesel/sqlite"]

[[example]]
name = "sea_orm"
required-features = ["sea-orm", "sea-orm/sqlx-sqlite"]

[[example]]
name = "sqlx"
required-features = ["sqlx", "sqlx/sqlite"]
